--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ Django==4.2.9
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
 gunicorn==20.1.0
-numpy==1.26.3
-pandas==2.1.4
-python-dateutil==2.8.2
-pytz==2023.3.post1
-six==1.16.0
-sqlparse==0.4.4
-typing_extensions==4.9.0
-tzdata==2023.3
+numpy
+pandas
+python-dateutil
+pytz
+six
+sqlparse
+typing_extensions
+tzdata
 whitenoise==6.4.0
