--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -3,7 +3,8 @@ runtime: python3
 build:
   commands:
     build:
-      - pip install -r requirements.txt
+      - pip install pipenv
+      - pipevn install
 run:
   runtime-version: 3.8.16
   command: sh startup.sh
