--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -4,7 +4,7 @@ build:
   commands:
     build:
       - pip install pipenv
-      - pipevn install
+      - pipenv install
 run:
   runtime-version: 3.8.16
   command: sh startup.sh
