--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-﻿asgiref==3.7.2
-Django==4.2.9
-django-cors-headers==4.3.1
-djangorestframework==3.14.0
-gunicorn==20.1.0
+﻿asgiref
+Django
+django-cors-headers
+djangorestframework
+gunicorn
 numpy
 pandas
 python-dateutil
@@ -11,4 +11,4 @@ six
 sqlparse
 typing_extensions
 tzdata
-whitenoise==6.4.0
+whitenoise
