Changing pythom version

--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -3,9 +3,9 @@ runtime: python3
 build:
   commands:
     build:
-      - pip install -r requirements.txt
+      - pip3 install -r requirements.txt
 run:
-  runtime-version: 3.8.16
+  runtime-version: 3.11
   command: sh startup.sh
   network:
     port: 8000
