--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-aiohttp==3.9.3
+﻿aiohttp==3.9.3
 aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.2.0
 asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.2.0
+azure-identity
+azure-keyvault-secrets
 certifi==2023.11.17
 charset-normalizer==3.3.2
 colorama==0.4.6
@@ -28,10 +30,12 @@ openai==0.28.0
 pandas==2.2.0
 pipenv==2023.11.15
 platformdirs==4.1.0
+psycopg2
 pydantic==2.6.0
 pydantic_core==2.16.1
 PyJWT==2.8.0
 python-dateutil==2.8.2
+python-dotenv
 pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
